// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartProductCard renders correctly 1`] = `
<DocumentFragment>
  <div
    class="cart-product-card"
  >
    <div
      class="cart-product-card-img"
    >
      <img
        alt="product"
        loading="lazy"
        src="https://via.placeholder.com/300"
      />
    </div>
    <div
      class="cart-product-card-info"
    >
      <a
        href="/product/1"
      >
        <h3
          class="cart-product-card-title"
        >
          Product 1
        </h3>
      </a>
      <div
        class="cart-product-card-quantity"
      >
        <label
          for="product-quantity"
        >
          Quantity: 
        </label>
        <button
          class="quantity-btn"
          disabled=""
          type="button"
        >
          -
        </button>
        <input
          id="product-quantity"
          type="text"
          value="1"
        />
        <button
          class="quantity-btn"
          type="button"
        >
          +
        </button>
      </div>
    </div>
    <div
      class="action-btns"
    >
      <p
        class="cart-product-card-price"
      >
        <strong>
          Amount:
        </strong>
         $10
      </p>
      <button
        class="cart-product-card-btn"
      >
        Remove
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CartProductCard renders correctly with Quantity 5 1`] = `
<DocumentFragment>
  <div
    class="cart-product-card"
  >
    <div
      class="cart-product-card-img"
    >
      <img
        alt="product"
        loading="lazy"
        src="https://via.placeholder.com/300"
      />
    </div>
    <div
      class="cart-product-card-info"
    >
      <a
        href="/product/1"
      >
        <h3
          class="cart-product-card-title"
        >
          Product 1
        </h3>
      </a>
      <div
        class="cart-product-card-quantity"
      >
        <label
          for="product-quantity"
        >
          Quantity: 
        </label>
        <button
          class="quantity-btn"
          type="button"
        >
          -
        </button>
        <input
          id="product-quantity"
          type="text"
          value="5"
        />
        <button
          class="quantity-btn"
          type="button"
        >
          +
        </button>
      </div>
    </div>
    <div
      class="action-btns"
    >
      <p
        class="cart-product-card-price"
      >
        <strong>
          Amount:
        </strong>
         $50
      </p>
      <button
        class="cart-product-card-btn"
      >
        Remove
      </button>
    </div>
  </div>
</DocumentFragment>
`;
